--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
   assets:
     - assets/unixWords.txt
     - assets/ospd.txt
-    - popular.txt
+    - assets/popular.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
