--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +63,14 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/unixWords.txt
-    - assets/ospd.txt
-    - assets/popular.txt
+    - 'assets/All.txt'
+    - 'assets/CET4.txt'
+    - 'assets/CET6.txt'
+    - 'assets/CET46.txt'
+    - 'assets/GRE Slim.txt'
+    - 'assets/TOEFL Slim.txt'
+    - 'assets/TOEFL.txt'
+    - 'assets/HighSchool.txt'
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
