--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.3.8+2220
+version: 1.0.0315+20220315
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -66,7 +66,7 @@ flutter:
     - 'assets/All.txt'
     - 'assets/CET4.txt'
     - 'assets/CET6.txt'
-    - 'assets/CET46.txt'
+    - 'assets/CET4 + 6.txt'
     - 'assets/GRE Slim.txt'
     - 'assets/TOEFL Slim.txt'
     - 'assets/TOEFL.txt'
